Fix Vercel deployment + improve UI: fix module imports, add simple file uploader, better copy

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,11 @@
     "buildCommand": "npm run build",
     "outputDirectory": "dist/public",
     "framework": null,
+    "functions": {
+        "api/index.ts": {
+            "includeFiles": "server/**"
+        }
+    },
     "rewrites": [
         {
             "source": "/api/:path*",
