--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DATABASE_URL=postgresql://neondb_owner:npg_SJQ6d3pRrbCa@ep-muddy-tooth-a1wrc6hd-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
 NODE_ENV=development
 PORT=5000
+BLOB_READ_WRITE_TOKEN=vercel_blob_rw_1vy9VZGl15S7chZa_7US8MwpABlLHMp7zoqWwkiJdN6nn9q
